--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "graphql": "^0.13.2",
     "mongoose": "^5.0.17",
     "next": "latest",
+    "next-redux-wrapper": "^2.0.0-beta.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-infinite-scroller": "^1.1.4",
-    "react-scroll": "^1.7.9"
+    "react-redux": "^5.0.7",
+    "react-scroll": "^1.7.9",
+    "redux": "^4.0.0"
   },
   "license": "ISC",
   "devDependencies": {
