--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
   },
   "dependencies": {
     "graphql": "^0.13.2",
+    "jquery": "^3.3.1",
+    "material-design-icons": "^3.0.1",
+    "materialize-css": "^0.100.2",
+    "mdi-react": "^3.3.0",
     "mongoose": "^5.0.17",
     "next": "latest",
     "next-redux-wrapper": "^2.0.0-beta.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-infinite-scroller": "^1.1.4",
+    "react-material-icons": "^1.0.3",
+    "react-materialize": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-scroll": "^1.7.9",
+    "react-settings-panel": "^1.0.8",
     "redux": "^4.0.0"
   },
   "license": "ISC",
