--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,7 @@
       {
         "extensions": [".css"]
       }
-    ]
+    ],
+    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
   ]
 }
