--- a/package.json
+++ b/package.json
@@ -12,23 +12,30 @@
     "generate": "npm run makeDispensaryModel && npm run makeInventoryModel && mkdir dispensary && mkdir inventory && node seed/seeder.js && node seed/seederD.js && npm run seed"
   },
   "dependencies": {
+    "babel-plugin-inline-import": "^2.0.6",
+    "babel-plugin-styled-components": "^1.5.1",
     "graphql": "^0.13.2",
     "jquery": "^3.3.1",
+    "jss": "latest",
     "material-design-icons": "^3.0.1",
+    "material-ui": "next",
     "materialize-css": "^0.100.2",
     "mdi-react": "^3.3.0",
     "mongoose": "^5.0.17",
-    "next": "latest",
+    "next": "^6.0.1",
     "next-redux-wrapper": "^2.0.0-beta.5",
+    "prop-types": "latest",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-infinite-scroller": "^1.1.4",
+    "react-jss": "latest",
     "react-material-icons": "^1.0.3",
     "react-materialize": "^2.2.0",
     "react-redux": "^5.0.7",
     "react-scroll": "^1.7.9",
     "react-settings-panel": "^1.0.8",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "styled-jsx": "^2.2.6"
   },
   "license": "ISC",
   "devDependencies": {
