--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,3 @@
 {
-  "presets": ["next/babel"],
-  "plugins": [
-    [
-      "inline-import",
-      {
-        "extensions": [".css"]
-      }
-    ],
-    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false } ]
-  ]
+  "presets": ["next/babel"]
 }
