--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "jquery": "^3.3.1",
     "jss": "latest",
     "material-design-icons": "^3.0.1",
-    "material-ui": "next",
+    "material-ui": "^0.20.0",
     "materialize-css": "^0.100.2",
     "mdi-react": "^3.3.0",
     "mongoose": "^5.0.17",
